Fix collection mobile filter/sort

--- a/src/scss/collection.scss
+++ b/src/scss/collection.scss
@@ -152,7 +152,7 @@
       right: 0;
       z-index: 1;
 
-      h4 {
+      * {
         margin-bottom: 0;
       }
 
